[package]
name = "lox-rust"
version = "0.1.0"
edition = "2021"
authors = ["John Mumm <jtfmumm@gmail.com>"]

[dependencies]
im = "15.1.0"
rand = "0.8.5"
unicode-segmentation = "1.10.1"

[dependencies.argparse]
version = "*"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
